# MasterThesis

./: .gitignore  ConvertLabeledPlyToShapenet.sh  ConvertLabeledPlyToShapenet2.sh  README.md
Documents/Ausarbeitung/: ba-mit-latex.tex  bibleografie.bib  eval_todos.txt  formeln.aux  formeln.out  formeln.tex  grafik.eps  notes.md  template copy.tex  template.aux  template.bbl  template.blg  template.out  template.tex  template.toc
Documents/Kolloquium/: VortragKolloquium.aux  VortragKolloquium.bbl  VortragKolloquium.blg  VortragKolloquium.nav  VortragKolloquium.out  VortragKolloquium.snm  VortragKolloquium.tex  VortragKolloquium.toc  bibleografie.bib  notes.txt
Documents/VortragMasterSeminar/: VortragMasterArbeit.aux  VortragMasterArbeit.bbl  VortragMasterArbeit.blg  VortragMasterArbeit.nav  VortragMasterArbeit.out  VortragMasterArbeit.snm  VortragMasterArbeit.tex  VortragMasterArbeit.toc
Documents/test/: paper.aux  paper.out  paper.tex
config/: test.config
python/: Master Thesis- Server Client - Workflow Example.postman_collection.json  TestServedMethods.postman_collection.json  cleanODM.py  constants.py  environment.yml  flaskServer.py  generateRandomSet.py  jobs.py  registration.py  reportPointNetpp.py  restore  server.py  servercert.pem  serverkey.pem  state.py  utilities.py
python/Learning3D/: debug_util.py  registration.py  test_dcp.py  (+6 more)
src/: CMakeLists.txt  CMakeListsPyBinding.txt  bindings.cpp  configuration.h  debug.h  definitions.h  gaussian.h  main.cpp  registration.h  registration_cgal.h  registration_pcl.h  test.h  utilities.h  utilities_io.h
(+279 files in other folders)
